# formation-C

./: PLAN1_debutant.md  PLAN2_intermediaire.md  PLAN3_complet.md  PLAN4_en.md  README.md  REFERENCES.md
CahierExercices/: Cahier.md
Exercices/workspaces/: .gitignore  README.md  ex1_TypeSize.c  ex2_BitWise.c  ex3_Tab.c  ex4_LinkList.c  ex_Socket.c  ex_Thread.c
Exercices/workspaces/HelloCmake/: CMakeLists.txt  main.c
Exercices/workspaces/HelloTeapots/: CMakeLists.txt
Exercices/workspaces/HelloTeapots/src/: HelloTeapots.c
Slides/: 00_agenda.md  01_Presentation_&_exemples.md  02_Syntaxe_language.md  03_Elaborer_un_programme.md  04_Comprendre_les_pointeurs.md  05_Outils.md  06_Libs_&_algo.md
